fix css wrap li tag in selector

--- a/assets/stylesheets/wice_grid.css
+++ b/assets/stylesheets/wice_grid.css
@@ -157,7 +157,7 @@ input.wice-grid-save-query-field {
    margin-top: 6px;
 }
 
-li {
+#user-time-report-menu li {
   line-height: 18px;
 }
 
